# hermes-iso27k

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  smoke_tests.py
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
plugin/: __init__.py  audit_store.py  hooks.py  plugin.yaml  policy-rules.yaml  policy.py
scripts/: bundle_evidence.py
skill/: SKILL.md
skill/references/: iso27001-controls.md
skill/scripts/: report_generator.py
tests/: test_audit_store.py  test_bundle_evidence.py  test_bundle_evidence_failure.py  test_hooks_and_redaction.py  test_iso27001_alignment.py  test_policy.py  test_report_generator.py  test_status.py
