[project]
name = "hermes-iso27k"
version = "0.1.0"
description = "ISO 27001 Annex A evidence collection and policy enforcement plugin for Hermes Agent"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
iso27k-report = "skill.scripts.report_generator:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["plugin*", "skill*"]
